@@ -2262,17 +2262,17 @@ Run hook `vc-dwim-post-commit-hook'."
 (blackout 'meow-motion-mode)
 (blackout 'meow-beacon-mode)
 (blackout 'meow-keypad-mode)
-(blackout 'ws-butler-mode)
-(blackout 'paredit-mode)
-(blackout 'whitespace-mode)
-(blackout 'goggles-mode)
-(blackout 'jinx-mode)
-(blackout 'gcmh-mode)
-(blackout 'eldoc-mode)
-(blackout 'valign-mode)
-(blackout 'abbrev-mode)
-(blackout 'olivetti-mode)
-(blackout 'nerd-icons-multimodal-mode)
+(after-load! ws-butler (blackout 'ws-butler-mode))
+(after-load! paredit (blackout 'paredit-mode))
+(after-load! whitespace (blackout 'whitespace-mode))
+(after-load! goggles (blackout 'goggles-mode))
+(after-load! jinx (blackout 'jinx-mode))
+(after-load! gcmh (blackout 'gcmh-mode))
+(after-load! eldoc (blackout 'eldoc-mode))
+(after-load! valign (blackout 'valign-mode))
+(after-load! abbrev (blackout 'abbrev-mode))
+(after-load! olivetti (blackout 'olivetti-mode))
+(after-load! nerd-icons-multimodal (blackout 'nerd-icons-multimodal-mode))
 
 ;;;; uptime
 
